// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic text styles > desktop > about > Просторный зал 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Просторный зал",
}
`;

exports[`basic text styles > desktop > about > Тренажерный зал 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Тренажерный зал",
}
`;

exports[`basic text styles > desktop > about > самый большой фитнес центр 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "самый большой фитнес центр",
}
`;

exports[`basic text styles > desktop > faq > Абонемент 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "18px",
  "text": "Абонемент",
}
`;

exports[`basic text styles > desktop > faq > Вопросы и ответы 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Вопросы и ответы",
}
`;

exports[`basic text styles > desktop > faq > Где можно посмотреть 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Где можно посмотреть",
}
`;

exports[`basic text styles > desktop > faq > Для тренировок необходимо 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Для тренировок необходимо",
}
`;

exports[`basic text styles > desktop > faq > Как стать членом 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Как стать членом",
}
`;

exports[`basic text styles > desktop > faq > Какие дополнительные правила 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Какие дополнительные правила",
}
`;

exports[`basic text styles > desktop > faq > При первом посещении 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "При первом посещении",
}
`;

exports[`basic text styles > desktop > faq > Центр 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "18px",
  "text": "Центр",
}
`;

exports[`basic text styles > desktop > features > 100 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "70px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "70px",
  "text": "100",
}
`;

exports[`basic text styles > desktop > features > 900 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "70px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "70px",
  "text": "900",
}
`;

exports[`basic text styles > desktop > features > Занимайтесь без 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Занимайтесь без",
}
`;

exports[`basic text styles > desktop > features > Наши преимущества 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Наши преимущества",
}
`;

exports[`basic text styles > desktop > features > Площадь 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Площадь",
}
`;

exports[`basic text styles > desktop > features > Современные тренажеры 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Современные тренажеры",
}
`;

exports[`basic text styles > desktop > features > Тренажеров 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "26px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "26px",
  "text": "Тренажеров",
}
`;

exports[`basic text styles > desktop > features > кв/м 1`] = `
{
  "color": "rgb(46, 53, 172)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "кв/м",
}
`;

exports[`basic text styles > desktop > footer > 8-800-555-55-55 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "8-800-555-55-55",
}
`;

exports[`basic text styles > desktop > footer > 60 лет Октября 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "60 лет Октября",
}
`;

exports[`basic text styles > desktop > footer > Email: 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Email:",
}
`;

exports[`basic text styles > desktop > footer > omsk@supergym.ru 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "omsk@supergym.ru",
}
`;

exports[`basic text styles > desktop > footer > Абонементы 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Абонементы",
}
`;

exports[`basic text styles > desktop > footer > Адрес 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Адрес",
}
`;

exports[`basic text styles > desktop > footer > Бесплатное занятие 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Бесплатное занятие",
}
`;

exports[`basic text styles > desktop > footer > График работы: 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "График работы:",
}
`;

exports[`basic text styles > desktop > footer > Контакты 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Контакты",
}
`;

exports[`basic text styles > desktop > footer > Отправить 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Отправить",
}
`;

exports[`basic text styles > desktop > footer > Пн-Вс: с 8:00 до 22:00 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Пн-Вс: с 8:00 до 22:00",
}
`;

exports[`basic text styles > desktop > footer > Телефон: 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Телефон:",
}
`;

exports[`basic text styles > desktop > footer > Услуги 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Услуги",
}
`;

exports[`basic text styles > desktop > games > 7 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "40px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "40px",
  "text": "7",
}
`;

exports[`basic text styles > desktop > games > 12:00 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "40px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "40px",
  "text": "12:00",
}
`;

exports[`basic text styles > desktop > games > 2019 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "14px",
  "text": "2019",
}
`;

exports[`basic text styles > desktop > games > Certified 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Certified",
}
`;

exports[`basic text styles > desktop > games > CrossFit 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "CrossFit",
}
`;

exports[`basic text styles > desktop > games > Super games 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "82px",
  "font-weight": "600",
  "letter-spacing": "2.46px",
  "line-height": "76px",
  "text": "Super games",
}
`;

exports[`basic text styles > desktop > games > Александр Пашков 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Александр Пашков",
}
`;

exports[`basic text styles > desktop > games > Анна Павлова 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Анна Павлова",
}
`;

exports[`basic text styles > desktop > games > Время 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Время",
}
`;

exports[`basic text styles > desktop > games > Дата 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Дата",
}
`;

exports[`basic text styles > desktop > games > Ежегодные соревнования 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Ежегодные соревнования",
}
`;

exports[`basic text styles > desktop > games > Жюри 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Жюри",
}
`;

exports[`basic text styles > desktop > games > Заполнить заявку 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Заполнить заявку",
}
`;

exports[`basic text styles > desktop > games > Марта 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "14px",
  "text": "Марта",
}
`;

exports[`basic text styles > desktop > games > Опыт 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Опыт",
}
`;

exports[`basic text styles > desktop > games > Победитель чемпионата России 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Победитель чемпионата России",
}
`;

exports[`basic text styles > desktop > hero > 8-800-555-55-55 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "26px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "26px",
  "text": "8-800-555-55-55",
}
`;

exports[`basic text styles > desktop > hero > Купить абонемент 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Купить абонемент",
}
`;

exports[`basic text styles > desktop > hero > Омск 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Омск",
}
`;

exports[`basic text styles > desktop > hero > Тренажёрный зал 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Тренажёрный зал",
}
`;

exports[`basic text styles > desktop > offers > 4999 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "70px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "70px",
  "text": "4999",
}
`;

exports[`basic text styles > desktop > offers > Акции 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Акции",
}
`;

exports[`basic text styles > desktop > offers > Безлимитный абонемент 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Безлимитный абонемент",
}
`;

exports[`basic text styles > desktop > offers > Год 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "26px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "26px",
  "text": "Год",
}
`;

exports[`basic text styles > desktop > offers > Корпоративный фитнес 1`] = `
{
  "color": "rgb(28, 51, 116)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Корпоративный фитнес",
}
`;

exports[`basic text styles > desktop > offers > Месяц бесплатно 1`] = `
{
  "color": "rgb(28, 51, 116)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "26px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "26px",
  "text": "Месяц бесплатно",
}
`;

exports[`basic text styles > desktop > offers > Подробнее 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "700",
  "letter-spacing": "0.7px",
  "line-height": "14px",
  "text": "Подробнее",
}
`;

exports[`basic text styles > desktop > offers > Приведи друга 1`] = `
{
  "color": "rgb(28, 51, 116)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Приведи друга",
}
`;

exports[`basic text styles > desktop > offers > Скидка 1`] = `
{
  "color": "rgb(28, 51, 116)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "26px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "26px",
  "text": "Скидка",
}
`;

exports[`basic text styles > desktop > price > 1 месяц 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "1 месяц",
}
`;

exports[`basic text styles > desktop > price > 6 месяцев 1`] = `
{
  "color": "rgba(16, 38, 84, 0.5)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "6 месяцев",
}
`;

exports[`basic text styles > desktop > price > 12 занятий 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "12 занятий",
}
`;

exports[`basic text styles > desktop > price > Абонементы 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Абонементы",
}
`;

exports[`basic text styles > desktop > price > Дневной 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "26px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "26px",
  "text": "Дневной",
}
`;

exports[`basic text styles > desktop > price > Купить абонемент 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Купить абонемент",
}
`;

exports[`basic text styles > desktop > price > С тренером 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "26px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "26px",
  "text": "С тренером",
}
`;

exports[`basic text styles > desktop > price > с 8:00 до 17:00 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "с 8:00 до 17:00",
}
`;

exports[`basic text styles > desktop > reviews > Анна Орлова 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Анна Орлова",
}
`;

exports[`basic text styles > desktop > reviews > Отзывы 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "54px",
  "font-weight": "600",
  "letter-spacing": "1.62px",
  "line-height": "54px",
  "text": "Отзывы",
}
`;

exports[`basic text styles > desktop > reviews > больше года 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "больше года",
}
`;

exports[`basic text styles > mobile > about > Просторный зал 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Просторный зал",
}
`;

exports[`basic text styles > mobile > about > Тренажерный зал 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Тренажерный зал",
}
`;

exports[`basic text styles > mobile > about > самый большой фитнес центр 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "самый большой фитнес центр",
}
`;

exports[`basic text styles > mobile > faq > Абонемент 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "16px",
  "text": "Абонемент",
}
`;

exports[`basic text styles > mobile > faq > Вопросы и ответы 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Вопросы и ответы",
}
`;

exports[`basic text styles > mobile > faq > Где можно посмотреть 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Где можно посмотреть",
}
`;

exports[`basic text styles > mobile > faq > Для тренировок необходимо 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Для тренировок необходимо",
}
`;

exports[`basic text styles > mobile > faq > Как стать членом 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Как стать членом",
}
`;

exports[`basic text styles > mobile > faq > Какие дополнительные правила 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Какие дополнительные правила",
}
`;

exports[`basic text styles > mobile > faq > При первом посещении 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "При первом посещении",
}
`;

exports[`basic text styles > mobile > faq > Центр 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "16px",
  "text": "Центр",
}
`;

exports[`basic text styles > mobile > features > 100 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "64px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "64px",
  "text": "100",
}
`;

exports[`basic text styles > mobile > features > 900 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "64px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "64px",
  "text": "900",
}
`;

exports[`basic text styles > mobile > features > Занимайтесь без 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Занимайтесь без",
}
`;

exports[`basic text styles > mobile > features > Наши преимущества 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Наши преимущества",
}
`;

exports[`basic text styles > mobile > features > Площадь 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Площадь",
}
`;

exports[`basic text styles > mobile > features > Современные тренажеры 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Современные тренажеры",
}
`;

exports[`basic text styles > mobile > features > Тренажеров 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Тренажеров",
}
`;

exports[`basic text styles > mobile > features > кв/м 1`] = `
{
  "color": "rgb(46, 53, 172)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "кв/м",
}
`;

exports[`basic text styles > mobile > footer > 8-800-555-55-55 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "8-800-555-55-55",
}
`;

exports[`basic text styles > mobile > footer > 60 лет Октября 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "60 лет Октября",
}
`;

exports[`basic text styles > mobile > footer > Email: 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Email:",
}
`;

exports[`basic text styles > mobile > footer > omsk@supergym.ru 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "omsk@supergym.ru",
}
`;

exports[`basic text styles > mobile > footer > Абонементы 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Абонементы",
}
`;

exports[`basic text styles > mobile > footer > Адрес 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Адрес",
}
`;

exports[`basic text styles > mobile > footer > Бесплатное занятие 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Бесплатное занятие",
}
`;

exports[`basic text styles > mobile > footer > График работы: 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "График работы:",
}
`;

exports[`basic text styles > mobile > footer > Контакты 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Контакты",
}
`;

exports[`basic text styles > mobile > footer > Отправить 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Отправить",
}
`;

exports[`basic text styles > mobile > footer > Пн-Вс: с 8:00 до 22:00 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Пн-Вс: с 8:00 до 22:00",
}
`;

exports[`basic text styles > mobile > footer > Телефон: 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Телефон:",
}
`;

exports[`basic text styles > mobile > footer > Услуги 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Услуги",
}
`;

exports[`basic text styles > mobile > games > 7 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "7",
}
`;

exports[`basic text styles > mobile > games > 12:00 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "12:00",
}
`;

exports[`basic text styles > mobile > games > 2019 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "10px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "10px",
  "text": "2019",
}
`;

exports[`basic text styles > mobile > games > Certified 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Certified",
}
`;

exports[`basic text styles > mobile > games > CrossFit 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "CrossFit",
}
`;

exports[`basic text styles > mobile > games > Super games 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "48px",
  "font-weight": "600",
  "letter-spacing": "1.44px",
  "line-height": "46px",
  "text": "Super games",
}
`;

exports[`basic text styles > mobile > games > Александр Пашков 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Александр Пашков",
}
`;

exports[`basic text styles > mobile > games > Анна Павлова 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Анна Павлова",
}
`;

exports[`basic text styles > mobile > games > Время 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Время",
}
`;

exports[`basic text styles > mobile > games > Дата 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Дата",
}
`;

exports[`basic text styles > mobile > games > Ежегодные соревнования 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Ежегодные соревнования",
}
`;

exports[`basic text styles > mobile > games > Жюри 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Жюри",
}
`;

exports[`basic text styles > mobile > games > Заполнить заявку 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Заполнить заявку",
}
`;

exports[`basic text styles > mobile > games > Марта 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "10px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "10px",
  "text": "Марта",
}
`;

exports[`basic text styles > mobile > games > Опыт 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Опыт",
}
`;

exports[`basic text styles > mobile > games > Победитель чемпионата России 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Победитель чемпионата России",
}
`;

exports[`basic text styles > mobile > hero > 8-800-555-55-55 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "8-800-555-55-55",
}
`;

exports[`basic text styles > mobile > hero > Купить абонемент 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Купить абонемент",
}
`;

exports[`basic text styles > mobile > hero > Омск 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Омск",
}
`;

exports[`basic text styles > mobile > hero > Тренажёрный зал 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Тренажёрный зал",
}
`;

exports[`basic text styles > mobile > offers > 4999 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "64px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "64px",
  "text": "4999",
}
`;

exports[`basic text styles > mobile > offers > Акции 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Акции",
}
`;

exports[`basic text styles > mobile > offers > Безлимитный абонемент 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Безлимитный абонемент",
}
`;

exports[`basic text styles > mobile > offers > Год 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Год",
}
`;

exports[`basic text styles > mobile > offers > Корпоративный фитнес 1`] = `
{
  "color": "rgb(28, 51, 116)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Корпоративный фитнес",
}
`;

exports[`basic text styles > mobile > offers > Месяц бесплатно 1`] = `
{
  "color": "rgb(28, 51, 116)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Месяц бесплатно",
}
`;

exports[`basic text styles > mobile > offers > Подробнее 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "700",
  "letter-spacing": "0.7px",
  "line-height": "14px",
  "text": "Подробнее",
}
`;

exports[`basic text styles > mobile > offers > Приведи друга 1`] = `
{
  "color": "rgb(28, 51, 116)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Приведи друга",
}
`;

exports[`basic text styles > mobile > offers > Скидка 1`] = `
{
  "color": "rgb(28, 51, 116)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Скидка",
}
`;

exports[`basic text styles > mobile > price > 1 месяц 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "16px",
  "text": "1 месяц",
}
`;

exports[`basic text styles > mobile > price > 6 месяцев 1`] = `
{
  "color": "rgba(16, 38, 84, 0.5)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "16px",
  "text": "6 месяцев",
}
`;

exports[`basic text styles > mobile > price > 12 занятий 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "12 занятий",
}
`;

exports[`basic text styles > mobile > price > Абонементы 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Абонементы",
}
`;

exports[`basic text styles > mobile > price > Дневной 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Дневной",
}
`;

exports[`basic text styles > mobile > price > Купить абонемент 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Купить абонемент",
}
`;

exports[`basic text styles > mobile > price > С тренером 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "С тренером",
}
`;

exports[`basic text styles > mobile > price > с 8:00 до 17:00 1`] = `
{
  "color": "rgb(73, 90, 125)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "с 8:00 до 17:00",
}
`;

exports[`basic text styles > mobile > reviews > Анна Орлова 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Анна Орлова",
}
`;

exports[`basic text styles > mobile > reviews > Отзывы 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "32px",
  "font-weight": "600",
  "letter-spacing": "0.96px",
  "line-height": "32px",
  "text": "Отзывы",
}
`;

exports[`basic text styles > mobile > reviews > больше года 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "больше года",
}
`;

exports[`basic text styles > tablet > about > Просторный зал 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Просторный зал",
}
`;

exports[`basic text styles > tablet > about > Тренажерный зал 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "600",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Тренажерный зал",
}
`;

exports[`basic text styles > tablet > about > самый большой фитнес центр 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "самый большой фитнес центр",
}
`;

exports[`basic text styles > tablet > faq > Абонемент 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "18px",
  "text": "Абонемент",
}
`;

exports[`basic text styles > tablet > faq > Вопросы и ответы 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "600",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Вопросы и ответы",
}
`;

exports[`basic text styles > tablet > faq > Где можно посмотреть 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Где можно посмотреть",
}
`;

exports[`basic text styles > tablet > faq > Для тренировок необходимо 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Для тренировок необходимо",
}
`;

exports[`basic text styles > tablet > faq > Как стать членом 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Как стать членом",
}
`;

exports[`basic text styles > tablet > faq > Какие дополнительные правила 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Какие дополнительные правила",
}
`;

exports[`basic text styles > tablet > faq > При первом посещении 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "При первом посещении",
}
`;

exports[`basic text styles > tablet > faq > Центр 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "18px",
  "text": "Центр",
}
`;

exports[`basic text styles > tablet > features > 100 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "70px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "70px",
  "text": "100",
}
`;

exports[`basic text styles > tablet > features > 900 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "70px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "70px",
  "text": "900",
}
`;

exports[`basic text styles > tablet > features > Занимайтесь без 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Занимайтесь без",
}
`;

exports[`basic text styles > tablet > features > Наши преимущества 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "600",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Наши преимущества",
}
`;

exports[`basic text styles > tablet > features > Площадь 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Площадь",
}
`;

exports[`basic text styles > tablet > features > Современные тренажеры 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Современные тренажеры",
}
`;

exports[`basic text styles > tablet > features > Тренажеров 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Тренажеров",
}
`;

exports[`basic text styles > tablet > features > кв/м 1`] = `
{
  "color": "rgb(46, 53, 172)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "кв/м",
}
`;

exports[`basic text styles > tablet > footer > 8-800-555-55-55 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "8-800-555-55-55",
}
`;

exports[`basic text styles > tablet > footer > 60 лет Октября 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "60 лет Октября",
}
`;

exports[`basic text styles > tablet > footer > Email: 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Email:",
}
`;

exports[`basic text styles > tablet > footer > omsk@supergym.ru 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "omsk@supergym.ru",
}
`;

exports[`basic text styles > tablet > footer > Абонементы 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Абонементы",
}
`;

exports[`basic text styles > tablet > footer > Адрес 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Адрес",
}
`;

exports[`basic text styles > tablet > footer > Бесплатное занятие 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "600",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Бесплатное занятие",
}
`;

exports[`basic text styles > tablet > footer > График работы: 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "График работы:",
}
`;

exports[`basic text styles > tablet > footer > Контакты 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "700",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Контакты",
}
`;

exports[`basic text styles > tablet > footer > Отправить 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Отправить",
}
`;

exports[`basic text styles > tablet > footer > Пн-Вс: с 8:00 до 22:00 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Пн-Вс: с 8:00 до 22:00",
}
`;

exports[`basic text styles > tablet > footer > Телефон: 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "22px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Телефон:",
}
`;

exports[`basic text styles > tablet > footer > Услуги 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Услуги",
}
`;

exports[`basic text styles > tablet > games > 7 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "7",
}
`;

exports[`basic text styles > tablet > games > 12:00 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "12:00",
}
`;

exports[`basic text styles > tablet > games > 2019 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "10px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "10px",
  "text": "2019",
}
`;

exports[`basic text styles > tablet > games > Certified 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Certified",
}
`;

exports[`basic text styles > tablet > games > CrossFit 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "CrossFit",
}
`;

exports[`basic text styles > tablet > games > Super games 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "48px",
  "font-weight": "600",
  "letter-spacing": "1.44px",
  "line-height": "46px",
  "text": "Super games",
}
`;

exports[`basic text styles > tablet > games > Александр Пашков 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Александр Пашков",
}
`;

exports[`basic text styles > tablet > games > Анна Павлова 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Анна Павлова",
}
`;

exports[`basic text styles > tablet > games > Время 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Время",
}
`;

exports[`basic text styles > tablet > games > Дата 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Дата",
}
`;

exports[`basic text styles > tablet > games > Ежегодные соревнования 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Ежегодные соревнования",
}
`;

exports[`basic text styles > tablet > games > Жюри 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "600",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Жюри",
}
`;

exports[`basic text styles > tablet > games > Заполнить заявку 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Заполнить заявку",
}
`;

exports[`basic text styles > tablet > games > Марта 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "10px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "10px",
  "text": "Марта",
}
`;

exports[`basic text styles > tablet > games > Опыт 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Опыт",
}
`;

exports[`basic text styles > tablet > games > Победитель чемпионата России 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Победитель чемпионата России",
}
`;

exports[`basic text styles > tablet > hero > 8-800-555-55-55 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "8-800-555-55-55",
}
`;

exports[`basic text styles > tablet > hero > Купить абонемент 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Купить абонемент",
}
`;

exports[`basic text styles > tablet > hero > Омск 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "600",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Омск",
}
`;

exports[`basic text styles > tablet > hero > Тренажёрный зал 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "22px",
  "text": "Тренажёрный зал",
}
`;

exports[`basic text styles > tablet > offers > 4999 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "70px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "70px",
  "text": "4999",
}
`;

exports[`basic text styles > tablet > offers > Акции 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "600",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Акции",
}
`;

exports[`basic text styles > tablet > offers > Безлимитный абонемент 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Безлимитный абонемент",
}
`;

exports[`basic text styles > tablet > offers > Год 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Год",
}
`;

exports[`basic text styles > tablet > offers > Корпоративный фитнес 1`] = `
{
  "color": "rgb(28, 51, 116)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Корпоративный фитнес",
}
`;

exports[`basic text styles > tablet > offers > Месяц бесплатно 1`] = `
{
  "color": "rgb(28, 51, 116)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Месяц бесплатно",
}
`;

exports[`basic text styles > tablet > offers > Подробнее 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "14px",
  "font-weight": "700",
  "letter-spacing": "0.7px",
  "line-height": "14px",
  "text": "Подробнее",
}
`;

exports[`basic text styles > tablet > offers > Приведи друга 1`] = `
{
  "color": "rgb(28, 51, 116)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Приведи друга",
}
`;

exports[`basic text styles > tablet > offers > Скидка 1`] = `
{
  "color": "rgb(28, 51, 116)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Скидка",
}
`;

exports[`basic text styles > tablet > price > 1 месяц 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "18px",
  "text": "1 месяц",
}
`;

exports[`basic text styles > tablet > price > 6 месяцев 1`] = `
{
  "color": "rgba(16, 38, 84, 0.5)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "18px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "18px",
  "text": "6 месяцев",
}
`;

exports[`basic text styles > tablet > price > 12 занятий 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "12 занятий",
}
`;

exports[`basic text styles > tablet > price > Абонементы 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "600",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Абонементы",
}
`;

exports[`basic text styles > tablet > price > Дневной 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "Дневной",
}
`;

exports[`basic text styles > tablet > price > Купить абонемент 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "12px",
  "font-weight": "700",
  "letter-spacing": "0.6px",
  "line-height": "12px",
  "text": "Купить абонемент",
}
`;

exports[`basic text styles > tablet > price > С тренером 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "24px",
  "font-weight": "700",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "С тренером",
}
`;

exports[`basic text styles > tablet > price > с 8:00 до 17:00 1`] = `
{
  "color": "rgb(73, 90, 125)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "с 8:00 до 17:00",
}
`;

exports[`basic text styles > tablet > reviews > Анна Орлова 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "20px",
  "font-weight": "400",
  "letter-spacing": "normal",
  "line-height": "20px",
  "text": "Анна Орлова",
}
`;

exports[`basic text styles > tablet > reviews > Отзывы 1`] = `
{
  "color": "rgb(16, 38, 84)",
  "font-family": "\\"Alumni Sans\\", Arial, sans-serif",
  "font-size": "42px",
  "font-weight": "600",
  "letter-spacing": "1.26px",
  "line-height": "42px",
  "text": "Отзывы",
}
`;

exports[`basic text styles > tablet > reviews > больше года 1`] = `
{
  "color": "rgb(255, 255, 255)",
  "font-family": "\\"Roboto Condensed\\", Arial, sans-serif",
  "font-size": "16px",
  "font-weight": "300",
  "letter-spacing": "normal",
  "line-height": "24px",
  "text": "больше года",
}
`;
